# aiway

./: Cargo.toml  README.md  README_en.md  README_zh.md
.github/workflows/: publish.yml
aiway/: Cargo.toml  README.md  build.rs
aiway/src/: embed.rs  main.rs  server.rs
billing/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
conreg/: Cargo.toml  READMD.md
conreg/src/: app.rs  main.rs
conreg/src/config/: mod.rs
conreg/src/event/: mod.rs
conreg/src/raft/: mod.rs
console/: Cargo.toml
console/benches/: other.rs
console/src/: args.rs  init.rs  main.rs  server.rs
console/src/cache/: caches.rs  mod.rs
console/src/config/: config.rs
console/src/server/: mod.rs  web.rs
console/src/server/_template/: api.rs  mod.rs  request.rs  response.rs
console/src/server/auth/: mod.rs
console/src/server/common/: mod.rs  page.rs  res.rs
console/src/server/db/: mod.rs  mysql.rs  sqlite.rs
console/src/server/db/mapper/: api_key.html  gateway_node.html  gateway_node_state.html  log.html  message.html  plugin.html  route.html  service.html  statistics_request_province.html  statistics_request_status_code.html  user.html
console/src/server/db/migrations/: mod.rs
console/src/server/db/migrations/v0_1_0/: mod.rs
console/src/server/db/models/: api_key.rs  gateway_node.rs  gateway_node_state.rs  gateway_node_state_log.rs  gateway_state.rs  message.rs  mod.rs  model.rs  model_provider.rs  plugin.rs  route.rs  service.rs  setting.rs  statistics_request_province.rs  statistics_request_status_code.rs  system_config.rs  user.rs  user_auth.rs
console/src/server/db/sql/: init.sql
console/src/server/file/: api.rs  file_util.rs  mod.rs
console/src/server/firewall/: api.rs  mod.rs  request.rs  service.rs
console/src/server/gateway/: alerter.rs  api.rs  config.rs  configuration.rs  firewall.rs  global_filter.rs  ip_region.rs  mod.rs  plugin.rs  reporter.rs  route.rs  service.rs
console/src/server/key/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/log/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/message/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/metrics/: api.rs  gateway_global_state.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/model/: api.rs  request.rs  response.rs  service.rs
console/src/server/model_proxy/: api.rs  mod.rs  model.rs
console/src/server/node/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/plugin/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/route/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/service/: api.rs  mod.rs  request.rs  response.rs  service.rs
console/src/server/system/: mod.rs
console/src/server/system/notify/: api.rs  mod.rs  request.rs  service.rs
console/src/server/task/: ip_region_count.rs  metrics.rs  mod.rs  request_status_count.rs  state.rs
console/src/server/user/: api.rs  mod.rs  request.rs  response.rs  service.rs
data/: db  snap.0000000001D17EB6
gateway/: Cargo.toml
gateway/src/: init.rs  main.rs  server.rs
gateway/src/components/: client.rs  config.rs  firewall.rs  global_filter.rs  ip_region.rs  mod.rs  plugins.rs  router.rs  servicer.rs
gateway/src/config/: app_config.rs  mod.rs
gateway/src/constants/: mod.rs
gateway/src/context/: header.rs  manager.rs  mod.rs
gateway/src/fairing/: auth.rs  catchers.rs  cleanup.rs  filter.rs  global_filter.rs  lb.rs  logger.rs  mod.rs  pre.rs  request.rs  response.rs  routing.rs  security.rs  set_response_context.rs
gateway/src/openapi/: client.rs  eep.rs  error.rs  lb.rs  mod.rs  response.rs  sse.rs
gateway/src/report/: mod.rs  state.rs
gateway/src/router/: client.rs  config.rs  firewall.rs  global_filter.rs  mod.rs  plugins.rs  route.rs  router.rs  service.rs  servicer.rs
kms/: Cargo.toml
lib/aiway-plugin/: Cargo.toml
lib/aiway-plugin/src/: lib.rs  macros.rs  manager.rs
lib/aiway-protocol/: Cargo.toml
lib/aiway-protocol/src/: lib.rs  single.rs
lib/aiway-protocol/src/common/: constants.rs  mod.rs
lib/aiway-protocol/src/gateway/: alert.rs  api_key.rs  config.rs  firewall.rs  global_filter.rs  http_context.rs  mod.rs  plugin.rs  request_context.rs  request_log.rs  response_context.rs  route.rs  service.rs  state.rs
lib/alert/: Cargo.toml
lib/alert/src/: lib.rs  pusher.rs
lib/busi/: Cargo.toml
lib/cache/: Cargo.toml
lib/cache/src/: caches.rs  lib.rs  local_cache.rs  redis_cache.rs
lib/cache/src/share_cache/: client.rs  mod.rs  server.rs
lib/context/: Cargo.toml
lib/loadbalance/: Cargo.toml
lib/logging/: Cargo.toml  README.md
lib/logging/src/: lib.rs  request_logging.rs
lib/logging/src/appender/: local_appender.rs  mod.rs  quickwit_appender.rs
lib/logging/src/writer/: http_writer.rs  mod.rs
lib/plugin/: Cargo.toml
lib/plugin-manager/: Cargo.toml
lib/plugin-manager/src/: client.rs  lib.rs  plugins.rs
lib/plugin/src/: lib.rs  macros.rs  manager.rs  network.rs
lib/protocol/: Cargo.toml
lib/protocol/src/: gateway.rs  lib.rs  single.rs
lib/protocol/src/common/: constants.rs  mod.rs  req.rs  res.rs
lib/protocol/src/gateway/: alert.rs  api_key.rs  configuration.rs  firewall.rs  global_filter.rs  http_context.rs  mod.rs  plugin.rs  request_context.rs  request_log.rs  response_context.rs  route.rs  service.rs  state.rs
lib/protocol/src/logg/: mod.rs
lib/protocol/src/model/: mod.rs  model.rs  provider.rs
lib/pubsub/: Cargo.toml
lib/registry/: Cargo.toml
lib/router/: Cargo.toml
logg/: Cargo.toml
logg/src/: main.rs
logg/src/server/: api.rs  mod.rs
logg/src/server/index/: aiway_logs.rs  mod.rs  request_logs.rs
message/: Cargo.toml
message/src/: main.rs
model-proxy/: Cargo.toml
model-proxy/src/: init.rs  main.rs  server.rs
model-proxy/src/components/: client.rs  mod.rs  models.rs
model-proxy/src/proxy/: api.rs  client.rs  mod.rs  proxy.rs  request.rs  response.rs
plugins/demo/: Cargo.toml
resources/: aiway-logs-index.yaml  request-logs-index.yaml
test-server/: Cargo.toml
test-server/src/: main.rs
(+35 files in other folders)
