[package]
name = "aiway"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../lib/logging" }
cache = { path = "../lib/cache", features = ["share-cache"] }
anyhow = "1"
tokio = { version = "1", features = ["macros"] }
rust-embed = "8"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
