[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../lib/logging" }
cache = { path = "../lib/cache", optional = true }
common = { path = "../lib/common" }
protocol = { path = "../lib/protocol", features = ["rbatis"] }
rocket = { version = "0.5", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rbatis = { version = "4.6", features = ["debug_mode"] }
rbs = { version = "4.6" }
rbdc-sqlite = { version = "^4.6" }
rbdc-pool-fast = "4.6"
rbdc-mysql = { version = "4.6" }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
derive_builder = "0.20"
fs_extra = "1.3"
semver = "1.0"
reqwest = "0.12"
bcrypt = "0.17"
uuid = { version = "1.17.0", features = ["v4"] }

[features]
default = []
standalone = ["cache/share-cache"]
cluster = ["cache/redis-cache"]