[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../lib/logging" }
cache = { path = "../lib/cache", optional = true }
common = { path = "../lib/common" }
protocol = { path = "../lib/protocol", features = ["rbatis", "rocket", "logg", "api-key"] }
alert = { path = "../lib/alert" }
rocket = { version = "0.5", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rbatis = { version = "4.6", features = ["debug_mode"] }
rbs = { version = "4.6" }
rbdc-sqlite = { version = "^4.6" }
rbdc-pool-fast = "4.6"
rbdc-mysql = { version = "4.6" }
strum = "0.27"
strum_macros = "0.27"
serde = "1"
serde_json = "1"
derive_builder = "0.20"
fs_extra = "1.3"
semver = "1.0"
reqwest = "0.12"
bcrypt = "0.17"
uuid = { version = "1.17.0", features = ["v4"] }
nanoid = "0.4.0"
# config = { version = "0.15", default-features = false, features = ["json"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
validator = { version = "0.20", features = ["derive"] }
rust-embed = "8"
matchit = "0.9.0"

[features]
default = []
standalone = ["cache/share-cache"]
cluster = ["cache/redis-cache"]


[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "other"
harness = false

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-pc-windows-msvc.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-apple-darwin.dependencies]
openssl = { version = "0.10", features = ["vendored"] }