[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../lib/protocol", features = ["rocket", "api-key"] }
logging = { path = "../lib/logging" }
loadbalance = { path = "../lib/loadbalance" }
plugin = { path = "../lib/plugin" }
cache = { path = "../lib/cache" }
pubsub = { path = "../lib/pubsub" }
tokio = { version = "1", features = ["macros", "io-util", "bytes"] }
rocket = { version = "0.5", features = ["json"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
dashmap = "6.1"
uuid = { version = "1.18", features = ["v4"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["stream"] }
#conreg-client = { path = "/home/wxg/work/project/conreg/client" }
#conreg-client = { git = "https://github.com/xgpxg/conreg", tag = "0.1.3" }
globset = "0.4.16"
sys-info = "0.9"
md5 = "0.8"