[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../lib/common" }
protocol = { path = "../lib/protocol", features = ["rocket", "api-key", "alert"] }
logging = { path = "../lib/logging", features = ["request-log"] }
loadbalance = { path = "../lib/loadbalance" }
plugin = { path = "../lib/plugin" }
cache = { path = "../lib/cache", optional = true }
alert = { path = "../lib/alert" }
#pubsub = { path = "../lib/pubsub" }
tokio = { version = "1", features = ["macros", "io-util", "bytes"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
dashmap = "6.1"
uuid = { version = "1.18", features = ["v4"] }
tokio-util = "0.7"
reqwest = { version = "0.13", features = ["stream", "json", "query"] }
sysinfo = "0.37"
md5 = "0.8"
chrono = "0.4"
ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
matchit = "0.9.0"

[features]
default = []
standalone = ["cache/share-cache"]
cluster = ["cache/redis-cache"]
