[package]
name = "logg"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../lib/protocol",features = ["logg"] }
serde = "1"
serde_json = "1"
rocket = { version = "0.5", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tantivy = { version = "0.25.0" }
tantivy-jieba = { version = "0.17.0" }
chrono = { version = "0.4" }
