[package]
name = "model-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../lib/logging" }
alert = { path = "../lib/alert" }
protocol = { path = "../lib/protocol", features = ["model"] }
tokio = { version = "1", features = ["macros", "io-util", "bytes"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
openai_dive = { version = "1.4.0", features = ["stream"], git = "https://github.com/xgpxg/openai-client" }
dashmap = "6.1"
md5 = "0.8"
chrono = "0.4"
fastrand = "2.3.0"
