[package]
name = "model-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../lib/logging" }
alert = { path = "../lib/alert" }
aiway-protocol = { path = "../lib/aiway-protocol", features = ["model"] }
context = { path = "../lib/context" }
aiway-plugin = { path = "../lib/aiway-plugin" }
plugin-manager = { path = "../lib/plugin-manager" }
tokio = { version = "1", features = ["macros", "io-util", "bytes"] }
rocket = { git = "https://github.com/xgpxg/Rocket.git", branch = "v0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["stream", "json", "query"] }
openai_dive = { version = "1.4.0", features = ["stream"], git = "https://github.com/xgpxg/openai-client" }
dashmap = "6.1"
fastrand = "2.3.0"
bytes = { version = "1.11", features = ["serde"] }
tokio-stream = { version = "0.1" }
aha-reqwest-eventsource = { version = "0.1.0" }

