[package]
name = "aiway-plugin"
version = "0.1.0"
edition = "2024"
authors = ["wxg <1584929962@qq.com>"]
description = "The aiway plugin lib"
documentation = "https://docs.rs/aiway-plugin"
keywords = ["aiway", "plugin"]
license = "Apache-2.0"
repository = "https://github.com/xgpxg/aiway"

[dependencies]
aiway-protocol = { path = "../aiway-protocol", version = "0.1.0" }
libloading = "0.8"
reqwest = "0.13"
uuid = { version = "1.18", features = ["v4"] }
dashmap = "6.1"
async-trait = "0.1.89"
serde_json = "1"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
model = ["aiway-protocol/model"]
