[package]
name = "aiway-protocol"
version = "0.1.0"
edition = "2024"
authors = ["wxg <1584929962@qq.com>"]
description = "The aiway protocol lib"
documentation = "https://docs.rs/aiway-protocol"
keywords = ["aiway", "protocol"]
license = "Apache-2.0"
repository = "https://github.com/xgpxg/aiway"

[dependencies]
dashmap = { version = "6.1", features = ["serde"] }
serde = "1"
serde_json = { version = "1" }
rocket = { git = "https://github.com/xgpxg/Rocket.git", branch = "v0.5", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
base58 = { version = "0.2.0", optional = true }
uuid = { version = "1.18", features = ["v4"], optional = true }
rbatis = { version = "4.6", optional = true }
chrono = { version = "0.4", optional = true }
tokio-stream = "0.1"
bytes = "1.11"

[features]
api-key = ["chacha20poly1305", "base58", "uuid"]
logg = []
alert = ["chrono"]
model = []
