[package]
name = "alert"
version = "0.1.0"
edition = "2024"

[dependencies]
aiway-protocol = { path = "../aiway-protocol", features = ["alert"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
