[package]
name = "cache"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
moka = { version = "0.12.10", features = ["sync"] }
anyhow = "1"
sled = "0.34"
tokio = { version = "1", features = ["rt"] }
log = "0.4"
async-trait = "0.1.89"
serde_json = "1"
deadpool-redis = { version = "0.22.0", features = ["cluster"], optional = true }
