[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono", "ansi", "registry"] }
reqwest = "0.12"
tokio = { version = "1", features = ["macros"] }
log = "0.4"
tracing-appender = "0.2"
tracing-log = "0.2.0"
serde = "1"
serde_json = "1"
bitflags = "2.9.4"