[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono", "ansi", "registry"] }
reqwest = "0.12"
tokio = { version = "1", features = ["macros"] }
log = "0.4"
tracing-appender = "0.2"
tracing-log = "0.2.0"
serde = "1"
serde_json = "1"
bitflags = "2.9.4"
tantivy = { version = "0.25.0", optional = true }
tantivy-jieba = { version = "0.17.0", optional = true }
chrono = { version = "0.4", optional = true }

[features]
local-storage = ["tantivy", "tantivy-jieba", "chrono"]