[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aiway-protocol = { path = "../aiway-protocol" }
busi = { path = "../busi" }
logging = { path = "../logging" }
aiway-plugin = { path = "../aiway-plugin" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
dashmap = "6.1"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "query"] }
md5 = "0.8"
