[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
libloading = "0.8"
reqwest = "0.12"
uuid = { version = "1.18", features = ["v4"] }
dashmap = "6.1"
async-trait = "0.1.89"
serde = "1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }