[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { version = "6.1", features = ["serde"] }
serde = "1"
serde_json = { version = "1" }
rocket = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
base58 = { version = "0.2.0", optional = true }
uuid = { version = "1.18", features = ["v4"], optional = true }
rbatis = { version = "4.6", optional = true }
chrono = { version = "0.4", optional = true }
tokio-stream = { version = "0.1", optional = true }
bytes = "1.11"

[features]
api-key = ["chacha20poly1305", "base58", "uuid"]
logg = []
alert = ["chrono"]
model = []
stream = ["tokio-stream"]